@@ -31,7 +31,7 @@ Please visit http://aegisub.net to download latest version
 - Added a "Auto Save on Every Change" option to config.dat (default false), that automatically saves the files whenever you change anything. (AMZ)
 - Added support for reading ASS, SSA and SRT softsubs directly from Matroska files. (AMZ)
 - Fixed line selection after pasting. (AMZ)
-- Times can now be copy and pasted with ctrl+c and ctrl+v, as well as from context menu, in the time edit boxes. (AMZ)
+- Times can now be copy and pasted with ctrl+c and Ctrl+V, as well as from context menu, in the time edit boxes. (AMZ)
 - Plain-text lines can now be pasted into the grid. They will be inserted as default lines with the text as their content. (AMZ)
 - Added Paste Over function, which allows you to paste subtitle lines over others, overwriting the fields of your choice. (AMZ)
 - Renaming a style will now ask you if you want to rename all instances of it on the script. (AMZ)
@@ -57,6 +57,7 @@ Please visit http://aegisub.net to download latest version
 - Actor and Effect fields now show a "ghosted" caption saying their name when they are not focused on and blank. (AMZ)
 - Aegisub now remembers if it was maximized when it was last quit, and restores its state when opening again. (AMZ)
 - A few minor tweaks to the Find dialogue. (AMZ)
+- Tweaked the behavior of the margin boxes, now they no longer show padding zeroes. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
